tests/ui/codegen/overflow-during-mono.stderr
error: reached the recursion limit while instantiating `quicksort::<Filter<Filter<Filter<..., ...>, ...>, ...>, ..., i32>`
  --> $DIR/overflow-during-mono.rs:16:25
   |
LL |             let mut v = quicksort(less);
   |                         ^^^^^^^^^^^^^^^
   |
note: `quicksort` defined here
  --> $DIR/overflow-during-mono.rs:6:1
   |
LL | / fn quicksort<It: Clone + Iterator<Item = T>, I: IntoIterator<IntoIter = It>, T: Ord>(
LL | |     i: I,
LL | | ) -> Vec<T> {
   | |___________^
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/overflow-during-mono.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

